[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"

# [[bin]]
# name = "hello"
# path = "./src/hello.rs"

# [[bin]]
# name = "banking"
# path = "./src/banking.rs"

# [[bin]]
# name = "struct_demo"
# path = "./src/struct_demo.rs"

[[bin]]
name = "library"
path = "./src/library.rs"


# [[bin]]
# name = "rust_play"
# path = "./src/rust_play.rs"

# clear ;cargo run --bin hello