[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# [[bin]]
# name = "hello"
# path = "./src/hello.rs"

# [[bin]]
# name = "rust_play"
# path = "./src/rust_play.rs"

# [[bin]]
# name = "banking"
# path = "./src/banking.rs"

# [[bin]]
# name = "struct_demo"
# path = "./src/struct_demo.rs"

# [[bin]]
# name = "library"
# path = "./src/library.rs"

# [[bin]]
# name = "generics"
# path = "./src/generics.rs"

# [[bin]]
# name = "pair"
# path = "./src/pair.rs"

# [[bin]]
# name = "iterator_demo"
# path = "./src/iterator_demo.rs"


# [[bin]]
# name = "marco_demo"
# path = "./src/marco_demo.rs"

# [[bin]]
# name = "todo"
# path = "./src/todo.rs"


# [[bin]]
# name = "todo_struct"
# path = "./src/todo_struct.rs"

# [[bin]]
# name = "todo_trait"
# path = "./src/todo_trait.rs"


[[bin]]
name = "lifetime"
path = "./src/lifetime.rs"

# [[bin]]
# name = "trait_demo"
# path = "./src/trait_demo.rs"

# clear ;cargo run --bin hello